CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_emplmt_exp_hist__x/sfrosit_t_sbsd_emplmt_exp_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_sbsd_emplmt_exp_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_sbsd_emplmt_exp_hist</externalName>
    <label>Employment Expense History</label>
    <pluralLabel>Employment Expense History</pluralLabel>
</CustomObject>