CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_emplmt_exp_hist__x/fields/amt_exp__c.field-meta.xml
<CustomField>
    <fullName>amt_exp__c</fullName>
    <description>amt_exp</description>
    <externalDeveloperName>amt_exp</externalDeveloperName>
    <label>Expense Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>