CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_emplmt_exp_hist__x/fields/cde_freq_exp__c.field-meta.xml
<CustomField>
    <fullName>cde_freq_exp__c</fullName>
    <description>cde_freq_exp</description>
    <externalDeveloperName>cde_freq_exp</externalDeveloperName>
    <label>Expense Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>