CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_emplmt_exp_hist__x/fields/cde_type_verify__c.field-meta.xml
<CustomField>
    <fullName>cde_type_verify__c</fullName>
    <description>cde_type_verify</description>
    <externalDeveloperName>cde_type_verify</externalDeveloperName>
    <label>Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>