CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_emplmt_exp_hist__x/fields/dte_exp__c.field-meta.xml
<CustomField>
    <fullName>dte_exp__c</fullName>
    <description>dte_exp</description>
    <externalDeveloperName>dte_exp</externalDeveloperName>
    <label>Expense Date</label>
    <type>Date</type>
</CustomField>