CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_emplmt_exp_hist__x/fields/idn_case_vrfyng__c.field-meta.xml
<CustomField>
    <fullName>idn_case_vrfyng__c</fullName>
    <description>idn_case_vrfyng</description>
    <externalDeveloperName>idn_case_vrfyng</externalDeveloperName>
    <label>Verifying Case ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>