CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_emplmt_exp_hist__x/fields/idn_exp__c.field-meta.xml
<CustomField>
    <fullName>idn_exp__c</fullName>
    <description>idn_exp</description>
    <externalDeveloperName>idn_exp</externalDeveloperName>
    <label>Expense ID</label>
    <length>50</length>
    <referenceTargetField>T_SBSD_EMPLMT_EXP__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_SBSD_EMPLMT_EXP__c</referenceTo>
    <relationshipLabel>Employment Expense Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_sbsd_emplmt_exp_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>