CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_emplmt_exp_hist__x/fields/idn_exp_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_exp_hist__c</fullName>
    <description>idn_exp_hist</description>
    <externalDeveloperName>idn_exp_hist</externalDeveloperName>
    <label>Expense History ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>