CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_emplmt_exp_hist__x/fields/nbr_seq_exp_emplmt__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_exp_emplmt__c</fullName>
    <description>nbr_seq_exp_emplmt</description>
    <externalDeveloperName>nbr_seq_exp_emplmt</externalDeveloperName>
    <label>Number sequence employment expense</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>